--- a/final_project/package.json
+++ b/final_project/package.json
@@ -1,19 +1,19 @@
 {
   "name": "bookshop",
   "version": "1.0.1",
-  "description": "",
+  "description": "Proyecto Final Node",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Israel Paredes",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.1",
     "express-session": "^1.17.3",
-    "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.19"
+    "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.1.9"
   }
 }
